環境構築 databse.ymlのURL修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,4 +18,4 @@ production:
   <<: *default
   database: activerecorder_production
   username: activerecorder
-  password: <%= ENV['ACTIVERECORDER_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
