--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Docker
-      shell: bash
+    name: Setup Docker
+      shell: zsh
       run: |
         docker-compose build
         docker-compose run web bundle install
         docker-compose run web bundle exec rails db:create
-    - name: Rspec
-      shell: bash
+    name: Run Rspec
+      shell: zsh
       run: |
         docker-compose run web bundle exec rspec
+    name: Run Rubocop
+      shell: zsh
+      run: |
+        docker-compose run web bundle exec rubocop
