--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,18 +6,18 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    name: Setup Docker
-      shell: zsh
-      run: |
-        docker-compose build
-        docker-compose run web bundle install
-        docker-compose run web bundle exec rails db:create
-    name: Run Rspec
-      shell: zsh
-      run: |
-        docker-compose run web bundle exec rspec
-    name: Run Rubocop
-      shell: zsh
-      run: |
-        docker-compose run web bundle exec rubocop
+      - uses: actions/checkout@v2
+      - name: Setup Docker
+        shell: zsh
+        run: |
+          docker-compose build
+          docker-compose run web bundle install
+          docker-compose run web bundle exec rails db:create
+      - name: Run Rspec
+        shell: zsh
+        run: |
+          docker-compose run web bundle exec rspec
+      - name: Run Rubocop
+        shell: zsh
+        run: |
+          docker-compose run web bundle exec rubocop
