--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Docker
-        shell: zsh
+        shell: bash
         run: |
           docker-compose build
           docker-compose run web bundle install
           docker-compose run web bundle exec rails db:create
       - name: Run Rspec
-        shell: zsh
+        shell: bash
         run: |
           docker-compose run web bundle exec rspec
       - name: Run Rubocop
-        shell: zsh
+        shell: bash
         run: |
           docker-compose run web bundle exec rubocop
