--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - '5432:5432'
   web:
     build: .
-
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b '0.0.0.0'"
     volumes:
       - .:/app
@@ -20,6 +19,8 @@ services:
 
     depends_on:
       - db
+    tty: true
+    stdin_open: true
 volumes:
   postgresql-data:
     driver: local
