--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,75 @@
-name: Run RSpec, Rubocop
-on: push
+name: Continuous Integration
+
+on:
+  push:
 
 jobs:
-  unit-test:
-    name: Setup
+  rspec:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .
+    services:
+      postgres:
+        image: postgres:13 # PostgreSQLのイメージを指定します。
+        ports:
+          - 5432:5432 # PostgreSQLのデフォルトポート番号を指定します。
+        env:
+          POSTGRES_USER: postgres # PostgreSQLのユーザー名を指定します。
+          POSTGRES_PASSWORD: postgres # PostgreSQLのパスワードを指定します。
+          POSTGRES_DB: test # テスト用のデータベース名を指定します。
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Docker
-        shell: bash
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2.2
+          bundler-cache: true
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Bundler and gem install
         run: |
-          docker-compose build
-          docker-compose run web bundle install
-          docker-compose run web bundle exec rails db:create
-      - name: Run Rspec
-        shell: bash
+          gem install bundler
+          bundle install
+
+      - name: Database create and migrate
         run: |
-          docker-compose run web bundle exec rspec
-      - name: Run Rubocop
-        shell: bash
+          cp config/database.yml.ci config/database.yml
+          bundle exec rails db:create RAILS_ENV=test
+          bundle exec rails db:migrate RAILS_ENV=test
+
+      - name: Run rspec
+        run: bundle exec rspec
+
+  rubocop:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: rails
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2.2
+          bundler-cache: true
+
+      - name: Bundler and gem install
         run: |
-          docker-compose run web bundle exec rubocop
+          gem install bundler
+          bundle install
+
+      - name: Run rubocop
+        run: bundle exec rubocop
