--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: rails
+        working-directory: .
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
